use URI than URL